ゲームエンジンの基本フレームワークを構築
`IGamePlatform`や`IGraphics`などのインターフェースを追加し、プラットフォーム非依存の抽象化を提供。`DxLibPlatform`を実装し、`DxLib`を使用したグラフィックス、入力、時間管理の具体的な機能を追加。

- `Color`構造体を追加し、色空間の操作や補間をサポート。
- `GameRunner`クラスを追加し、ゲームの実行ループを管理。
- `IGame`インターフェースを追加し、ゲームライフサイクルを定義。
- `Program.cs`にテストゲームの例を実装。
- `DxLib_x64.dll`をプロジェクトに埋め込み、ビルド設定を更新。

--- a/DXLib/AstrumLoom.DXLib.csproj
+++ b/DXLib/AstrumLoom.DXLib.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="DxLib_x64.dll" />
+    <EmbeddedResource Include="DxLib_x64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\AstrumLoom.csproj" />
+  </ItemGroup>
+
 </Project>
