--- a/DXLib/AstrumLoom.DXLib.csproj
+++ b/DXLib/AstrumLoom.DXLib.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Core\AstrumLoom.csproj" />
   </ItemGroup>
 
