サウンド拡張機能と新プロジェクトを追加
`AstrumLoom.Extend.csproj` を新規追加し、`Sandbox` プロジェクトに参照を追加しました。このプロジェクトでは、`ManagedBass` ライブラリを使用してサウンド操作を管理する `SoundExtend` および `ManagedSound` クラスを実装しました。

- `AstrumLoom.slnx` に `AstrumLoom.Extend.csproj` を追加。
- `Sandbox.csproj` に `AstrumLoom.Extend.csproj` への参照を追加。
- `SoundExtend.cs` を追加し、サウンド再生、停止、音量、ピッチ、速度などの操作を提供。
- `ManagedBass` パッケージ（v4.0.2）を導入し、BASS ライブラリを通じたサウンド管理を実現。
- `bass.dll` をリソースとして埋め込み、出力ディレクトリにコピーする設定を追加。

--- a/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\AstrumLoom.csproj" />
     <ProjectReference Include="..\DXLib\AstrumLoom.DXLib.csproj" />
+    <ProjectReference Include="..\Extend\AstrumLoom.Extend.csproj" />
     <ProjectReference Include="..\RayLib\AstrumLoom.RayLib.csproj" />
   </ItemGroup>
 
