AviUtl exoアニメ・動画(FFmpeg)再生機能を追加
AviUtl拡張編集(exo)アニメーションの読み込み・再生機能を追加し、グループ制御や各種フィルター、UndoFishイージング補間に対応。FFMpegCoreを用いた動画ファイルのフレーム抽出・再生・音声同期も実装。`LayoutUtil.Point`/`Size`の演算子拡張、`BigNum`構造体の追加など数値・座標系ユーティリティも強化。SkinクラスでのExo管理や各種ロジックも拡張。

--- a/Extend/AstrumLoom.Extend.csproj
+++ b/Extend/AstrumLoom.Extend.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FFMpegCore" Version="5.4.0" />
     <PackageReference Include="ManagedBass" Version="4.0.2" />
   </ItemGroup>
 
